
syntax = "proto3";
package g2u;

message NullRequest{

}

message CommonErrResponse{
    int32 err       =1;
    string message  =2;
}

message CommonRequest{
    int32  uid       =1;
    string token       =2;
}
